<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            android:scaleType="fitCenter" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/logo"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/outline_border"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textSize="13sp" />

        <RelativeLayout
            android:id="@+id/passwordContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/outline_border"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="52dp"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/togglePassword"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/show_password"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/visibility_off_icon" />

        </RelativeLayout>

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordContainer"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@id/errorText"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/outline_border"
            android:backgroundTint="@color/button_clr"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/forgotPasswordLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="25dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/button_clr"
            android:textSize="13sp" />

    </RelativeLayout>
</layout>
